<resources>
    <string name="app_name">BalanceBite</string>
    <string name="wave_one">Wave Upper</string>
    <string name="logo_image">BalanceBite Logo</string>
    <string name="wave_two">Wave Down</string>
    <string name="sign_in_button_string">Sign In</string>
    <string name="information_string">Please Login with your Account</string>
    <string name="email_string">Email Address</string>
    <string name="email_hint_string">Enter Your Email Address</string>
    <string name="password_string">Password</string>
    <string name="password_hint_string">Enter Your Password</string>
    <string name="remember_me_string">Remember Me</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="login_with_string">Login With</string>
    <string name="app_layout_sign_in_des">Apps Sign in Logo</string>
    <string name="wave_on_login">Wave_on_login</string>
    <string name="child_image">Child image</string>
    <string name="card_view_pop_up_name">Login Page</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_information">Please Sign Up with your Account</string>
    <string name="user_name_string">Username</string>
    <string name="user_name_hint_string">Enter Your Username</string>
    <string name="user_name_on_home_screen">Welcome, User</string>
    <string name="wave_on_home_screen_image_description">Wave Image description</string>
    <string name="line_below_user_name_on_home_screen">Find, Track and Eat healthy food.</string>
    <string name="pros_and_cons_of_fast_food">Fast Food: Blessings &amp; Burdens</string>
    <string name="read_now_button_text_on_dashboard">Read Now</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="image_content_desc_on_app_setting_activity">Profile Picture</string>
    <string name="password_hint_on_app_setting_activity">New Password</string>
    <string name="string_on_change_password_button">Change Password</string>
    <string name="string_on_about_button">About</string>
    <string name="string_on_delete_profile_button">Delete Profile</string>
    <string name="string_on_show_progress_button">Show Progress Information</string>
    <string name="string_on_logout_button">Logout</string>
    <string name="string_on_admin_login_button">Login to Admin Account</string>
    <string name="string_on_about_app_label">About BalanceBite</string>
    <string name="string_feedback_title">Any advice or suggestions?</string>
    <string name="string_feedback_hint">Your Experience</string>
    <string name="rate_us">Rate Us</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="name_about_app">Idea By Hafiz Bilal Shahid</string>
    <string name="developer_name">Developer Humayun Amar</string>
    <string name="app_version">Version: </string>
    <string name="title_admin_dashboard">Admin Dashboard</string>
    <string name="button_feedback">Feedback</string>
    <string name="greeting_line_on_chatbot_activity">Welcome to the BalanceBite Chatbot</string>
    <string name="query_line_on_chatbot_activity">Enter your query…</string>
    <string name="send_button_on_chatbot_activity">Send</string>
    <string name="name_label_on_edit_user_activity">Name</string>
    <string name="enter_name_on_edit_user_activity">Enter Name</string>
    <string name="age_label_on_edit_user_activity">Age</string>
    <string name="enter_age_on_edit_user_activity">Enter Age</string>
    <string name="height_label_on_edit_user_activity">Height (cm)</string>
    <string name="enter_height_on_edit_user_activity">Enter Height</string>
    <string name="weight_label_on_edit_user_activity">Weight (kg)</string>
    <string name="enter_weight_on_edit_user_activity">Enter Weight</string>
    <string name="health_info_label_on_edit_user_activity">Health Information</string>
    <string name="enter_health_info_on_edit_user_activity">Enter Health Information</string>
    <string name="save_button_on_edit_user_activity">Save</string>
    <string name="delete_button_on_edit_user_activity">Delete</string>
    <string name="pros_of_fast_food">Blessings</string>
    <string name="pros_lines">1. Convenient and time-saving.\n2. Affordable and easily accessible.\n3. Consistent taste and quality.\n4. Variety of options available.</string>
    <string name="cons_of_fast_food">Burdens</string>
    <string name="cons_lines">1. High in calories and unhealthy fats.\n2. Often contains excessive sugar and sodium.\n3. Can contribute to weight gain and health issues.\n4. May lack nutritional value compared to fresh foods.</string>
    <string name="sign_up_line_on_login_page">You don\'t Have An Account? Signup</string>
    <string name="label_on_screen_after_splash_screen">Eat Healthy</string>
    <string name="line_on_splash_screen">Maintaining good health should be the primary focus of everyone.</string>
    <string name="get_started_button">Get Started</string>
    <string name="image_content_on_splash_screen">Image of BalanceBite</string>
    <string name="track_progress_line">Track Your Weekly Progress</string>
    <string name="track_button">Track</string>
    <string name="nutrition_line">Nutrition Sources</string>
    <string name="fruit_image_desc">Fruit Image</string>
    <string name="vegetable_image_desc">Vegetable Image</string>
    <string name="supplement_image_desc">Supplement Image</string>
    <string name="label_fruits">Fruits</string>
    <string name="label_vegetables">Vegetables</string>
    <string name="label_supplements">Supplements</string>
    <string name="title_diet_plan">View Diet Plan</string>
    <string name="title_exercise">View Exercises</string>
    <string name="username_label">Username: </string>
    <string name="age_label">Age: </string>
    <string name="height_label">Height: </string>
    <string name="weight_label">Weight: </string>
    <string name="health_info_label">Health Information: </string>
    <string name="daily_progress_label">Daily Progress</string>
    <string name="day_label">Enter Day (e.g., Monday, Tuesday, etc.)</string>
    <string name="calories_label">Intake Calories of this day: </string>
    <string name="water_label">Enter glasses of water </string>
    <string name="exercise_label">Enter exercise time (in minutes)</string>
    <string name="weight_label_on_progress_activity">Updated Weight: </string>
    <string name="submit_progress_button">Submit Progress</string>
    <string name="desc_child_on_sign_up">Child Image</string>
    <string name="progress_label">Your Progress</string>
    <string name="upload_pic_line">Upload a Profile Picture in small size</string>
    <string name="name_of_user">Enter Name</string>
    <string name="upload_profile_pic_button">Upload profile Picture</string>
    <string name="age_icon">Enter Age</string>
    <string name="height_icon">Enter Height (cm)</string>
    <string name="weight_icon">Enter Weight (kg)</string>
    <string name="health_icon">Enter Health Information (optional)</string>
    <string name="submit_user_info">Submit Information</string>
    <string name="days">Days</string>
    <string name="meals">Meals</string>
    <string name="age">Age</string>
    <string name="age_group">Age Group</string>
    <string name="activities">Activities</string>
    <string name="recommended_time">Recommended Time</string>
    <string name="day">"Day "</string>
    <string name="calories">Calories:</string>
    <string name="water_glasses">Water:</string>
    <string name="exercise_time">Exercise Time:</string>
    <string name="weight">Weight:</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">username</string>
    <string name="details">Details</string>
    <string name="edit_account_button">Edit Account</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="diet_plans">Diet Plans</string>
    <string name="chat">AI: ChatBot</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_info_label">User Information</string>
    <string name="upload_profile_picture">Update Profile Picture</string>
    <string name="any_problem_then_mail_me">Any Problem than Mail me</string>
    <string name="email_me_string">Email: amarhumayun@outlook.com</string>
    <string name="button_contact_us">Contact Us</string>
    <string name="body_mass_index_label">Body Mass Index (BMI):</string>
    <string name="gender_icon">Enter Gender</string>
    <string name="gender_label">Gender:</string>
    <string name="wave_bottom_desc">End Image on Recommended Diet Plan Activity</string>
    <string name="wave_top_desc">Wave top</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="bmi_category">BMI Category:</string>
    <string name="diet_plan">Diet Plan:</string>
    <string name="your_recommended_diet_plan">Your Recommended Diet Plan</string>
    <string name="your_recommended_diet_plan_according_to_your_information">Your Recommended Diet Plans</string>
    <string name="home">Home</string>
    <string name="profile_image_description">profile pic\n</string>
    <string name="app_logo_description">applogo</string>
    <string name="error_empty_fields">All fields are required</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_weak_password">Password must be at least 6 characters long</string>




</resources>