<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/no_selection"
        android:title=""
        android:enabled="false"
        android:visible="false" />


    <item
        android:id="@+id/nav_exercise_plan"
        android:icon="@drawable/dumbbell"
        android:title="@string/exercise_plans"
        />

    <item
        android:id="@+id/nav_chat_bot"
        android:icon="@drawable/chatbot"
        android:title="@string/chat"
        />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user"
        android:iconTint="@color/gray"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting"
        android:title="@string/settings"
        />


</menu>