<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ProfileShownActivity">

<ImageView
    android:id="@+id/wave_one"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:contentDescription="@string/wave_one"
    android:src="@drawable/wave_for_layout"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="1"
    android:background="@android:color/transparent"
    tools:ignore="ImageContrastCheck" />

<androidx.cardview.widget.CardView
    android:id="@+id/cardview_profile_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="16dp">

    <!-- LinearLayout inside CardView for user details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wave_on_home_screen_image_description"
            android:src="@drawable/wave_on_home_screen"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/app_name_on_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/green"
            android:textSize="36sp"
            android:padding="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <!-- Username -->
        <TextView
            android:id="@+id/usernameActualTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"/>

        <!-- Age -->
        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"/>

        <!-- Height -->
        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <!-- Weight -->
        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            android:layout_margin="10dp"
            android:textSize="16sp"/>

        <!-- Health Information -->
        <TextView
            android:id="@+id/healthInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_info_label"
            android:layout_margin="10dp"
            android:textSize="16sp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

<ImageView
    android:id="@+id/wave_two"
    android:layout_width="match_parent"
    android:layout_height="235dp"
    android:contentDescription="@string/wave_two"
    android:src="@drawable/wave"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@android:color/transparent"
    app:layout_constraintWidth_percent="1"
    tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
