<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Top Wave Image -->
    <ImageView
        android:id="@+id/wave_one"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/wave_one"
        android:src="@drawable/wave_for_layout"
        android:padding="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1"
        android:background="@android:color/transparent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/image_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/appimage"
        app:layout_constraintTop_toBottomOf="@id/wave_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1"
        android:background="@android:color/transparent"
        tools:ignore="ImageContrastCheck"/>

    <!-- Bottom Wave Image -->
    <ImageView
        android:id="@+id/wave_two"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="@string/wave_two"
        android:src="@drawable/wave"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintWidth_percent="1"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>